--- a/Tivi/app/src/main/res/layout/similar_tv_show_item.xml
+++ b/Tivi/app/src/main/res/layout/similar_tv_show_item.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="similarShow"
-            type="com.app.tivi.repository.newtork.response.ShowIListItem" />
+            type="com.app.tivi.features.uiModel.ShowListItem" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
